--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
 :root{
+    /*Text*/
+    --body-font: 'Poppins', sans-serif;
     --text-color: black;
     --title-color: black;
     --font-semi-bold: 600;
+    /*Colors*/
+    --main-red: #C31815;
     --body-color: #F1F2F3;
 }
-
 
 html {
     scroll-behavior: smooth;
 }
 body {
-    /*font-family: var(--body-font);*/
+    font-family: var(--body-font);
     background-color: var(--body-color);
     color: var(--text-color);
 }
@@ -23,10 +26,38 @@ h2,
 h3,
 h4{
     color: var(--title-color);
-    font-weight: var(--font-semi-bold);
+}
+h1,h2{
+    font-family: 'IBM Plex Serif', serif;
 }
 #logo{
     background-image: url(assets/img/logo.png);
     height: 52px;
     width: auto;
+}
+
+.metadata{
+    display: flex;
+    color: #2A2A2A;
+    justify-content: space-between;
+}
+.metadata > h4{
+    opacity: 0.7;
+    font-size: small;
+}
+.trending h3{
+    color: var(--main-red);
+    font-size: medium;
+}
+
+.trending i{
+    margin-left: 10px;
+    font-weight: var(--font-semi-bold);
+}
+.trending p{
+
+}
+
+#alert{
+    background-color: var(--main-red);
 }
